andamento do portifolio - header

--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -5,9 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
-  <title>Home</title>
+  <title>RikelmeSantos / Portifolio</title>
 </head>
 <body>
+<header class="header">
+  <div class="logo-not-finish">
 
+    <span class="name-logo">RIKELME SANTOS</span>
+  </div>
+
+    <nav class="links-container">      
+        <ul class="links">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">PROJECTS</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="content-home">
+
+</section>
+</body>
 </html>
