--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -30,7 +30,33 @@
 </header>
 
 <section class="content-home">
+  <h2>HELLO WORLD<span class="exclamation">!</span> I'M <br> RIKELME SANTOS</h2>
 
+  <div class="description">
+      <p>Sou um cara apaixonado por tecnologia. Me identifiquei com a área de frontend developer e venho estudando com o objetivo de estar sempre evoluindo na minha carreira.</p>
+  </div>
+
+  <button class="btn-projects"><a href="#projetos">PROJECTS</a></button>
+
+  <div class="links-medias-content">
+      <ul class="medias-contents">
+        <li><img src="imagens/icones/icons8-whatsapp.svg" alt="whatssap"></li>
+        <li style="margin: 10px 0px;"><img src="imagens/icones/icons8-gmail.svg" alt="Gmail"></li>
+        <li><img src="imagens/icones/icons8-github.svg" alt="github"></li>
+      </ul>
+  </div>
+
+<div class="arrow-loop">
+  <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+<lord-icon
+    src="https://cdn.lordicon.com/albqovim.json"
+    trigger="loop"
+    delay="500"
+    colors="primary:#121331"
+    state="hover-2"
+    style="width:50px;height:50px">
+</lord-icon>
+</div>
 </section>
 </body>
 </html>
