--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -22,39 +22,22 @@
   
       <nav class="links-container">
           <ul class="links">
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">PROJECTS</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">INÍCIO</a></li>
+            <li><a href="#">SOBRE</a></li>
+            <li><a href="#">PROJETOS</a></li>
+            <li><a href="#">CONTATO</a></li>
           </ul>
       </nav>
-
-      <button class="menu-plugin" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
-        <svg width="100" height="100" viewBox="0 0 100 100">
-          <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
-          <path class="line line2" d="M 20,50 H 80" />
-          <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
-        </svg>
-      </button>
   </header>
   
   <section class="content-home">
-    <nav class="links-container-mobile">
-      <ul class="links-mobile">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">PROJECTS</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
-  </nav>
-
     <h2>HELLO WORLD<span class="exclamation">!</span> I'M <br> RIKELME SANTOS</h2>
   
     <div class="description">
         <p>Sou um cara apaixonado por tecnologia. Me identifiquei com a área de frontend developer e venho estudando com o objetivo de estar sempre evoluindo na minha carreira.</p>
     </div>
   
-    <button class="btn-projects"><a href="#projetos">PROJECTS</a></button>
+    <button class="btn-projects"><a href="#projetos">PROJETOS</a></button>
   
     <div class="links-medias-content">
         <ul class="medias-contents">
@@ -63,18 +46,37 @@
           <li><img src="imagens/icones/icons8-github.svg" alt="github"></li>
         </ul>
     </div>
-  
-  <div class="arrow-loop">
-    <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
-  <lord-icon
-      src="https://cdn.lordicon.com/albqovim.json"
-      trigger="loop"
-      delay="500"
-      colors="primary:#121331"
-      state="hover-2"
-      style="width:50px;height:50px">
-  </lord-icon>
-  </div>
+  </section>
+
+  <section class="aboutMe">
+    <div class="aboutMe-content">
+      <h2>SOBRE MIM</h2>
+      <p>Aqui está algumas informações sobre minhas habilidades em tecnologia,<br> principalmente na área de programação.</p>
+    </div>
+
+    <div class="know-me-content">
+      <div class="know-me">
+        <h3>Me conheça!</h3>
+        <p>Estou estudando para me tornar um  Web Developer, sigo criando diversos projetos para estar sempre me aperfeiçoandoe e mantendo meu portifólio atualizado.
+         São projetos simples porque ainda sou iniciante.
+         <br>
+         Se você gostou dos meus projetos e tiver uma boa oportunidade que corresponda as minhas habilidades não hesite em entrar em contato comigo, estou aberto a oportunidades de trabalho onde possa estar contribuindo, aprendendo e crescendo.
+          <br>
+         Confira alguns dos meus trabalhos na seção Projetos.
+        </p>
+        <button><a href="#contact">Contact</a></button>
+      </div>
+      <div class="skills">
+        <h3>Minhas habilidades</h3>
+        <div class="My-skills">
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>JavaScript</span>
+          <span>Github</span>
+          <span>Design Responsivo</span>
+        </div>
+      </div>
+    </div>
   </section>
 </main>
 
