--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -57,23 +57,23 @@
     <div class="know-me-content">
       <div class="know-me">
         <h3>Me conheça!</h3>
-        <p>Estou estudando para me tornar um  Web Developer, sigo criando diversos projetos para estar sempre me aperfeiçoandoe e mantendo meu portifólio atualizado.
-         São projetos simples porque ainda sou iniciante.
+        <p>Estou estudando para me tornar um  <strong>Frontend Web Developer</strong>, sigo criando diversos projetos para estar sempre me aperfeiçoandoe e mantendo meu portifólio atualizado. São <strong>projetos</strong> simples porque ainda sou iniciante.</p> 
          <br>
-         Se você gostou dos meus projetos e tiver uma boa oportunidade que corresponda as minhas habilidades não hesite em entrar em contato comigo, estou aberto a oportunidades de trabalho onde possa estar contribuindo, aprendendo e crescendo.
+         <p>Se você gostou dos meus projetos e tiver uma boa oportunidade que corresponda as minhas habilidades não hesite em entrar em <strong>contato</strong> comigo, estou aberto a oportunidades de <strong>trabalho</strong> onde possa estar contribuindo, aprendendo e crescendo.</p>
           <br>
-         Confira alguns dos meus trabalhos na seção Projetos.
-        </p>
-        <button><a href="#contact">Contact</a></button>
+         <p>Confira alguns dos meus trabalhos na seção Projetos.</p>
+        <button class="btn-contact"><a href="#contact">CONTATO</a></button>
       </div>
+
       <div class="skills">
         <h3>Minhas habilidades</h3>
-        <div class="My-skills">
-          <span>HTML</span>
-          <span>CSS</span>
-          <span>JavaScript</span>
-          <span>Github</span>
-          <span>Design Responsivo</span>
+        <div class="my-skills">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Github</li>
+        </div>
+          <li id="design">Design Responsivo</li>
         </div>
       </div>
     </div>
