section-projects em andamento

--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -78,6 +78,13 @@
       </div>
     </div>
   </section>
+
+  <section class="projects">
+      <div class="project-text">
+        <h2>PROJETOS</h2>
+        <p>Aqui você encontrará projetos pessoais que eu realizei e tambem de alguns cursos que eu fiz</p>
+      </div>
+  </section>
 </main>
 
 <script type="module" src="script.js"></script>
