notebook-images-projects em andamento

--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -84,6 +84,26 @@
         <h2>PROJETOS</h2>
         <p>Aqui você encontrará projetos pessoais que eu realizei e tambem de alguns cursos que eu fiz</p>
       </div>
+
+      <div class="portifolio-projects">
+        <img style="margin-top: -150px;" src="imagens/notebook/notebook-para-html.png" alt="animais-fantasticos">
+
+        <div class="portifolio-text">
+            <h3>Animais Fantásticos</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla optio quis ratione accusamus, aspernatur tempore iste labore recusandae sed id doloremque. Earum incidunt asperiores quos nulla explicabo itaque commodi et!</p>
+            <button class="port-button"><a href="#">ACESSE</a></button>
+        </div>
+      </div>
+
+      <div style="margin-top: -150px;" class="portifolio-projects">
+        <img style="margin-top: -150px;" src="imagens/notebook/bikcraft.png" alt="bikcraft">
+
+        <div class="portifolio-text">
+            <h3>Bikcraft</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla optio quis ratione accusamus, aspernatur tempore iste labore recusandae sed id doloremque. Earum incidunt asperiores quos nulla explicabo itaque commodi et!</p>
+            <button class="port-button"><a href="#">ACESSE</a></button>
+        </div>
+      
   </section>
 </main>
 
