section projects em andamento

--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -103,7 +103,16 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla optio quis ratione accusamus, aspernatur tempore iste labore recusandae sed id doloremque. Earum incidunt asperiores quos nulla explicabo itaque commodi et!</p>
             <button class="port-button"><a href="#">ACESSE</a></button>
         </div>
-      
+        </div>
+
+        <div style="margin-top: -300px;" class="portifolio-projects-slide">
+          <img src="imagens/notebook/slide-notebook.png" alt="slide">
+  
+          <div style="margin-top: 240px;" lass="portifolio-text">
+              <h3>Slide Infinito</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla optio quis ratione accusamus, aspernatur tempore iste labore recusandae sed id doloremque. Earum incidunt asperiores quos nulla explicabo itaque commodi et!</p>
+              <button class="port-button"><a href="#">ACESSE</a></button>
+          </div>
   </section>
 </main>
 
