--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -85,8 +85,8 @@
         <p>Aqui você encontrará projetos pessoais que eu realizei e tambem de alguns cursos que eu fiz</p>
       </div>
 
-      <div class="portifolio-projects">
-        <img style="margin-top: -150px;" src="imagens/notebook/notebook-para-html.png" alt="animais-fantasticos">
+      <div data-aos="fade-right" data-aos-duration="300" class="portifolio-projects">
+        <img  style="margin-top: -150px;" src="imagens/notebook/notebook-para-html.png" alt="animais-fantasticos">
 
         <div class="portifolio-text">
             <h3>Animais Fantásticos</h3>
@@ -95,7 +95,7 @@
         </div>
       </div>
 
-      <div style="margin-top: -150px;" class="portifolio-projects">
+      <div data-aos="fade-right"  data-aos-duration="300" style="margin-top: -150px;" class="portifolio-projects">
         <img style="margin-top: -150px;" src="imagens/notebook/bikcraft.png" alt="bikcraft">
 
         <div class="portifolio-text">
@@ -105,7 +105,7 @@
         </div>
         </div>
 
-        <div style="margin-top: -300px;" class="portifolio-projects-slide">
+        <div data-aos="fade-right"  data-aos-duration="300" style="margin-top: -300px;" class="portifolio-projects-slide">
           <img src="imagens/notebook/slide-notebook.png" alt="slide">
   
           <div style="margin-top: 240px;" lass="portifolio-text">
@@ -114,8 +114,28 @@
               <button class="port-button"><a href="#">ACESSE</a></button>
           </div>
   </section>
-</main>
 
+  <section class="contact">
+      <div class="contact-text">
+        <h2>CONTATO</h2>
+        <p>Sinta-se a vontade para entrar em contato comigo. Responderei o mais breve possivel</p>
+      </div>
+
+    <form class="form" action="">
+      <label for="name">Nome</label>
+      <input type="text" name="name" id="name" placeholder="Seu nome">
+
+      <label for="email">Email</label>
+      <input type="email" name="email" id="email" placeholder="Seu email">
+
+      <label for="message">Mensagem</label>
+      <textarea name="message" id="message" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+
+     <button type="submit">ENVIAR</button>
+    </form>
+  </section>
+</main>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script type="module" src="script.js"></script>
 </body>
 </html>
