--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -42,7 +42,7 @@
     <div class="links-medias-content">
         <ul class="medias-contents">
           <li><img src="imagens/icones/icons8-whatsapp.svg" alt="whatssap"></li>
-          <li style="margin: 10px 0px;"><img src="imagens/icones/icons8-gmail.svg" alt="Gmail"></li>
+          <li style="margin: 10px 0px;"><img src="imagens/icones/icons8-gmail (1).svg" alt="Gmail"></li>
           <li><img src="imagens/icones/icons8-github.svg" alt="github"></li>
         </ul>
     </div>
@@ -134,6 +134,26 @@
      <button type="submit">ENVIAR</button>
     </form>
   </section>
+
+  <footer class="footer">
+      <div class="footer-grid">
+        <div class="footer-text">
+          <h3>RIKELME SANTOS</h3>
+          <p>Viso em me tornar um Frontend developer focado em construir sites e aplicativos web com qualidade</p>
+        </div>
+        <div class="social-media-footer">
+            <h3>SOCIAL</h3>
+            <ul class="media-footer">
+              <li><a href="#"><img src="imagens/icones-media-footer/icons8-github.svg" alt="github"></a></li>
+              <li><a href="#"><img src="imagens/icones-media-footer/icons8-gmail.svg" alt="Gmail"></a></li>
+              <li><a href="#"><img src="imagens/icones-media-footer/icons8-whatsapp.svg" alt="whatssap"></a></li>
+            </ul>
+        </div>
+      </div>
+      <div class="effect-footer"></div>
+        <p class="Copyright">© Copyright 2023. Made by &nbsp; <a href="">Rikelme Santos</a><p>
+    
+  </footer>
 </main>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script type="module" src="script.js"></script>
