--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -31,13 +31,9 @@
   </header>
   
   <section class="content-home">
-    <h2>HELLO WORLD<span class="exclamation">!</span> I'M <br> RIKELME SANTOS</h2>
-  
-    <div class="description">
-        <p>Sou um cara apaixonado por tecnologia. Me identifiquei com a área de frontend developer e venho estudando com o objetivo de estar sempre evoluindo na minha carreira.</p>
-    </div>
-  
-    <button class="btn-projects"><a href="#projetos">PROJETOS</a></button>
+        <div class="home-text">
+          <h2></h2>
+        </div>
   
     <div class="links-medias-content">
         <ul class="medias-contents">
@@ -79,14 +75,14 @@
     </div>
   </section>
 
-  <section class="projects">
+  <section class="projects" id="#projetos">
       <div class="project-text">
         <h2>PROJETOS</h2>
         <p>Aqui você encontrará projetos pessoais que eu realizei e tambem de alguns cursos que eu fiz</p>
       </div>
 
       <div data-aos="fade-right" data-aos-duration="300" class="portifolio-projects">
-        <img  style="margin-top: -150px;" src="imagens/notebook/notebook-para-html.png" alt="animais-fantasticos">
+        <img width="800" height="800" style="margin-top: -150px;" src="imagens/notebook/notebook-para-html.png" alt="animais-fantasticos">
 
         <div class="portifolio-text">
             <h3>Animais Fantásticos</h3>
@@ -96,7 +92,7 @@
       </div>
 
       <div data-aos="fade-right"  data-aos-duration="300" style="margin-top: -150px;" class="portifolio-projects">
-        <img style="margin-top: -150px;" src="imagens/notebook/bikcraft.png" alt="bikcraft">
+        <img width="800" height="800"style="margin-top: -150px;" src="imagens/notebook/bikcraft.png" alt="bikcraft">
 
         <div class="portifolio-text">
             <h3>Bikcraft</h3>
@@ -106,7 +102,7 @@
         </div>
 
         <div data-aos="fade-right"  data-aos-duration="300" style="margin-top: -300px;" class="portifolio-projects-slide">
-          <img src="imagens/notebook/slide-notebook.png" alt="slide">
+          <img width="800" height="800" src="imagens/notebook/slide-notebook.png" alt="slide">
   
           <div style="margin-top: 240px;" lass="portifolio-text">
               <h3>Slide Infinito</h3>
