--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -22,29 +22,31 @@
   
       <nav class="links-container">
           <ul class="links">
-            <li><a href="#">INÍCIO</a></li>
-            <li><a href="#">SOBRE</a></li>
-            <li><a href="#">PROJETOS</a></li>
-            <li><a href="#">CONTATO</a></li>
+            <li><a href="#inicio">INÍCIO</a></li>
+            <li><a href="#sobre">SOBRE</a></li>
+            <li><a href="#projetos">PROJETOS</a></li>
+            <li><a href="#contato">CONTATO</a></li>
           </ul>
       </nav>
   </header>
   
-  <section class="content-home">
+  <section id="inicio" class="content-home">
         <div class="home-text">
-          <h2></h2>
+          <h2>OLÁ<span>!</span> EU SOU RIKELME SANTOS</h2>
+          <p>Sou um cara apaixonado por tecnologia. Me identifiquei com a área de frontend developer e venho estudando com o objetivo de estar sempre evoluindo na minha carreira.</p>
+          <button><a href="#projects">PROJETOS</a></button>
         </div>
   
     <div class="links-medias-content">
         <ul class="medias-contents">
-          <li><img src="imagens/icones/icons8-whatsapp.svg" alt="whatssap"></li>
+          <li><a target="_blank" href="https://api.whatsapp.com/send?phone=5583991367031&text=Link%20para%20contato"><img src="imagens/icones/icons8-whatsapp.svg" alt="whatssap"></a></li>
           <li style="margin: 10px 0px;"><img src="imagens/icones/icons8-gmail (1).svg" alt="Gmail"></li>
-          <li><img src="imagens/icones/icons8-github.svg" alt="github"></li>
+          <li><a target="_blank" href="https://github.com/zRikelme"><img src="imagens/icones/icons8-github.svg" alt="github"></a></li>
         </ul>
     </div>
   </section>
 
-  <section class="aboutMe">
+  <section class="aboutMe" id="sobre">
     <div class="aboutMe-content">
       <h2>SOBRE MIM</h2>
       <p>Aqui está algumas informações sobre minhas habilidades em tecnologia,<br> principalmente na área de programação.</p>
@@ -75,7 +77,7 @@
     </div>
   </section>
 
-  <section class="projects" id="#projetos">
+  <section class="projects" >
       <div class="project-text">
         <h2>PROJETOS</h2>
         <p>Aqui você encontrará projetos pessoais que eu realizei e tambem de alguns cursos que eu fiz</p>
@@ -111,7 +113,7 @@
           </div>
   </section>
 
-  <section class="contact">
+  <section id="contato" class="contact">
       <div class="contact-text">
         <h2>CONTATO</h2>
         <p>Sinta-se a vontade para entrar em contato comigo. Responderei o mais breve possivel</p>
@@ -140,9 +142,9 @@
         <div class="social-media-footer">
             <h3>SOCIAL</h3>
             <ul class="media-footer">
-              <li><a href="#"><img src="imagens/icones-media-footer/icons8-github.svg" alt="github"></a></li>
+              <li><a target="_blank" href="https://github.com/zRikelme"><img src="imagens/icones-media-footer/icons8-github.svg" alt="github"></a></li>
               <li><a href="#"><img src="imagens/icones-media-footer/icons8-gmail.svg" alt="Gmail"></a></li>
-              <li><a href="#"><img src="imagens/icones-media-footer/icons8-whatsapp.svg" alt="whatssap"></a></li>
+              <li><a target="_blank" href="https://api.whatsapp.com/send?phone=5583991367031&text=Link%20para%20contato"><img src="imagens/icones-media-footer/icons8-whatsapp.svg" alt="whatssap"></a></li>
             </ul>
         </div>
       </div>
