--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -17,7 +17,7 @@
   <header class="header">
     <div class="logo-not-finish">
   
-      <span class="name-logo">RIKELME SANTOS</span>
+      <a href="http://127.0.0.1:5500/meu%20portifolio/index.html?name=&email=&message=#inicio"><span class="name-logo">RIKELME SANTOS</span></a>
     </div>
   
       <nav class="links-container">
@@ -34,13 +34,13 @@
         <div class="home-text">
           <h2>OLÁ<span>!</span> EU SOU RIKELME SANTOS</h2>
           <p>Sou um cara apaixonado por tecnologia. Me identifiquei com a área de frontend developer e venho estudando com o objetivo de estar sempre evoluindo na minha carreira.</p>
-          <button><a href="#projects">PROJETOS</a></button>
+          <button><a href="http://127.0.0.1:5500/meu%20portifolio/index.html#projetos">PROJETOS</a></button>
         </div>
   
     <div class="links-medias-content">
         <ul class="medias-contents">
           <li><a target="_blank" href="https://api.whatsapp.com/send?phone=5583991367031&text=Link%20para%20contato"><img src="imagens/icones/icons8-whatsapp.svg" alt="whatssap"></a></li>
-          <li style="margin: 10px 0px;"><img src="imagens/icones/icons8-gmail (1).svg" alt="Gmail"></li>
+          <li style="margin: 10px 0px;"><a href="mailto:rikelmecontv@gmail.com" target="_blank"><img src="imagens/icones/icons8-gmail (1).svg" alt="Gmail"></a></li>
           <li><a target="_blank" href="https://github.com/zRikelme"><img src="imagens/icones/icons8-github.svg" alt="github"></a></li>
         </ul>
     </div>
@@ -60,7 +60,7 @@
          <p>Se você gostou dos meus projetos e tiver uma boa oportunidade que corresponda as minhas habilidades não hesite em entrar em <strong>contato</strong> comigo, estou aberto a oportunidades de <strong>trabalho</strong> onde possa estar contribuindo, aprendendo e crescendo.</p>
           <br>
          <p>Confira alguns dos meus trabalhos na seção Projetos.</p>
-        <button class="btn-contact"><a href="#contact">CONTATO</a></button>
+        <button class="btn-contact"><a href="http://127.0.0.1:5500/meu%20portifolio/index.html#contato">CONTATO</a></button>
       </div>
 
       <div class="skills">
@@ -77,7 +77,7 @@
     </div>
   </section>
 
-  <section class="projects" >
+  <section class="projects" id="projetos">
       <div class="project-text">
         <h2>PROJETOS</h2>
         <p>Aqui você encontrará projetos pessoais que eu realizei e tambem de alguns cursos que eu fiz</p>
@@ -142,8 +142,8 @@
         <div class="social-media-footer">
             <h3>SOCIAL</h3>
             <ul class="media-footer">
-              <li><a target="_blank" href="https://github.com/zRikelme"><img src="imagens/icones-media-footer/icons8-github.svg" alt="github"></a></li>
-              <li><a href="#"><img src="imagens/icones-media-footer/icons8-gmail.svg" alt="Gmail"></a></li>
+              <li><a target="_blank " href="https://github.com/zRikelme"><img src="imagens/icones-media-footer/icons8-github.svg" alt="github"></a></li>
+              <li><a href="mailto:rikelmecontv@gmail.com" target="_blank"><img src="imagens/icones-media-footer/icons8-gmail.svg" alt="Gmail"></a></li>
               <li><a target="_blank" href="https://api.whatsapp.com/send?phone=5583991367031&text=Link%20para%20contato"><img src="imagens/icones-media-footer/icons8-whatsapp.svg" alt="whatssap"></a></li>
             </ul>
         </div>
