--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -129,7 +129,7 @@
 
       <label for="message">Mensagem</label>
       <textarea name="message" id="message" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
-      <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
+      <input type="hidden" name="_next" value="https://zrikelme.github.io/Portifolio/meu%20portifolio/thanks.html">
 
      <button type="submit">ENVIAR</button>
     </form>
