estilizando pagina thanks

--- a/meu portifolio/thanks.html
+++ b/meu portifolio/thanks.html
@@ -1,4 +1,17 @@
-<div class="contact-text">
-  <h2>CONTATO</h2>
-  <p>Sinta-se a vontade para entrar em contato comigo. Responderei o mais breve possivel</p>
-</div>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Thanks</title>
+</head>
+<body>
+  <section  id="inicio" class="content-home height-thanks">
+    <div class="home-text">
+      <h2>OBRIGADO PELO CONTATO<span>!</span></h2>
+      <button><a href="https://zrikelme.github.io/Portifolio/meu%20portifolio/index.html">VOLTAR</a></button>
+    </div>
+</section>
+</body>
+</html>
