link da home no meu nome

--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -18,7 +18,7 @@
   <header class="header">
     <div class="logo-not-finish">
   
-      <a href="http://127.0.0.1:5500/meu%20portifolio/index.html?name=&email=&message=#inicio"><span class="name-logo">RIKELME SANTOS</span></a>
+      <a href="https://zrikelme.github.io/Portifolio/meu%20portifolio/index.html"><span class="name-logo">RIKELME SANTOS</span></a>
     </div>
   
       <nav class="links-container">
