header responsivo em andamento

--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -16,10 +16,19 @@
 <body>
 <main>
   <header class="header">
+
     <div class="logo-not-finish">
   
       <a href="https://zrikelme.github.io/Portifolio/meu%20portifolio/index.html"><span class="name-logo">RIKELME SANTOS</span></a>
     </div>
+
+    <button class="menu-hamburguer" onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))" aria-label="Main Menu">
+      <svg width="35" height="35" viewBox="0 0 100 100">
+        <path class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+        <path class="line line2" d="M 20,50 H 80" />
+        <path class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+      </svg>
+    </button>
   
       <nav class="links-container">
           <ul class="links">
@@ -32,6 +41,16 @@
   </header>
   
   <section id="inicio" class="content-home">
+
+    <nav class="links-container-mobile">
+      <ul class="links">
+        <li><a href="#inicio">INÍCIO</a></li>
+        <li><a href="#sobre">SOBRE</a></li>
+        <li><a href="#projetos">PROJETOS</a></li>
+        <li><a href="#contato">CONTATO</a></li>
+      </ul>
+  </nav>
+
         <div class="home-text">
           <h2>OLÁ<span>!</span> EU SOU RIKELME SANTOS</h2>
           <p>Sou um cara apaixonado por tecnologia. Me identifiquei com a área de frontend developer e venho estudando com o objetivo de estar sempre evoluindo na minha carreira.</p>
