mobile projects em andamento

--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -126,9 +126,9 @@
         </div>
 
         <div data-aos="fade-right"  data-aos-duration="200" style="margin-top: -300px;" class="portifolio-projects-slide">
-          <img width="800" height="800" src="imagens/notebook/slide-notebook.png" alt="slide">
+          <img width="400" height="400" src="imagens/notebook/slide-notebook.png" alt="slide">
   
-          <div style="margin-top: 240px;" lass="portifolio-text">
+          <div style="margin-top: 240px;" class="portifolio-text text-edit">
               <h3>Slide Infinito</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla optio quis ratione accusamus, aspernatur tempore iste labore recusandae sed id doloremque. Earum incidunt asperiores quos nulla explicabo itaque commodi et!</p>
               <button class="port-button"><a href="#">ACESSE</a></button>
