--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -121,7 +121,7 @@
         <div class="portifolio-text">
             <h3>Bikcraft</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla optio quis ratione accusamus, aspernatur tempore iste labore recusandae sed id doloremque. Earum incidunt asperiores quos nulla explicabo itaque commodi et!</p>
-            <button class="port-button"><a href="#">ACESSE</a></button>
+            <button class="port-button"><a href="https://zrikelme.github.io/Projetos/Materiais/BikCraft/seguros.html" target="_blank">ACESSE</a></button>
         </div>
         </div>
 
