responsividade 800px em andamento

--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -105,7 +105,7 @@
         <p>Aqui você encontrará projetos pessoais que eu realizei e tambem de alguns cursos que eu fiz</p>
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="200" class="portifolio-projects">
+      <div id="anime" data-aos="fade-right" data-aos-duration="200" class="portifolio-projects">
         <img width="800" height="800" style="margin-top: -150px;" src="imagens/notebook/notebook-para-html.png" alt="animais-fantasticos">
 
         <div class="portifolio-text">
@@ -115,7 +115,7 @@
         </div>
       </div>
 
-      <div data-aos="fade-right"  data-aos-duration="200" style="margin-top: -150px;" class="portifolio-projects">
+      <div id="anime" data-aos="fade-right"  data-aos-duration="200" style="margin-top: -150px;" class="portifolio-projects">
         <img width="800" height="800"style="margin-top: -150px;" src="imagens/notebook/bikcraft.png" alt="bikcraft">
 
         <div class="portifolio-text">
@@ -125,7 +125,7 @@
         </div>
         </div>
 
-        <div data-aos="fade-right"  data-aos-duration="200" style="margin-top: -300px;" class="portifolio-projects-slide">
+        <div id="anime" data-aos="fade-right"  data-aos-duration="200" style="margin-top: -300px;" class="portifolio-projects-slide">
           <img width="400" height="400" src="imagens/notebook/slide-notebook.png" alt="slide">
   
           <div style="margin-top: 240px;" class="portifolio-text text-edit">
