responsividade em andamento

--- a/meu portifolio/index.html
+++ b/meu portifolio/index.html
@@ -19,7 +19,7 @@
   <header class="header">
 
     <div class="logo-not-finish">
-  
+        <img src="imagens/logo-site.png" alt="">
       <a href="https://zrikelme.github.io/Portifolio/meu%20portifolio/index.html"><span class="name-logo">RIKELME SANTOS</span></a>
     </div>
 
@@ -111,7 +111,6 @@
 
         <div class="portifolio-text">
             <h3>Animais Fantásticos</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla optio quis ratione accusamus, aspernatur tempore iste labore recusandae sed id doloremque. Earum incidunt asperiores quos nulla explicabo itaque commodi et!</p>
             <button class="port-button"><a href="https://zrikelme.github.io/Projetos/Materiais/animais-fantasticos/index.html" target="_blank">ACESSE</a></button>
         </div>
       </div>
@@ -121,7 +120,6 @@
 
         <div class="portifolio-text">
             <h3>Bikcraft</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla optio quis ratione accusamus, aspernatur tempore iste labore recusandae sed id doloremque. Earum incidunt asperiores quos nulla explicabo itaque commodi et!</p>
             <button class="port-button"><a href="https://zrikelme.github.io/Projetos/Materiais/BikCraft/" target="_blank">ACESSE</a></button>
         </div>
         </div>
@@ -130,8 +128,7 @@
           <img width="400" height="400" src="imagens/notebook/slide-notebook.png" alt="slide">
   
           <div style="margin-top: 240px;" class="portifolio-text text-edit">
-              <h3>Slide Infinito</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla optio quis ratione accusamus, aspernatur tempore iste labore recusandae sed id doloremque. Earum incidunt asperiores quos nulla explicabo itaque commodi et!</p>
+              <h3>Slide Infinito</h3>          
               <button class="port-button"><a href="https://zrikelme.github.io/Slide-Infinito-Games/slide-infinito/index.html" target="_blank">ACESSE</a></button>
           </div>
   </section>
